--- a/.github/workflows/closing-pr-comment-timestamp.yml
+++ b/.github/workflows/closing-pr-comment-timestamp.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       pr_number_manual:
         description: "PR number to use when this action is manually triggered"
-        required: true
+        required: false
         type: string
 
 jobs:
@@ -32,12 +32,13 @@ jobs:
       # Issue is when auto run, pr_number_manual has no value so if keyword errors out
       - name: Assess pr_number_manual input
         # If input is not default value, this is a manual run and PR number should be overwritten with manual input
-        # If input is default value, skip this step
+        # If input is default value (null), skip this step
         if: ${{ github.event.inputs.pr_number_manual != null }}
         run: |
           echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
           echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
 
+      # Writing to GITHUB_ENV makes the TIMESTAMP var accessible by other steps
       - name: Set TIMESTAMP
         id: set-timestamp
         run: echo "TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
@@ -58,6 +59,8 @@ jobs:
           # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           STATUS_CODE=$(curl -s -o /dev/null -H "Authorization: token ${GITHUB_TOKEN}" -w "%{http_code}" -X POST -i $COMMENT_URL -d "{\"body\":\"$COMMENT\"}")
           echo "STATUS_CODE=$STATUS_CODE" >> $GITHUB_OUTPUT
+      
+      # Example of how to use startsWith(), and how to exit an action with a bad result code
       - name: Mark as Fail if Bad Status Code 
         if: ${{ !startsWith(steps.closing_comment_step.outputs.STATUS_CODE, '2') }}
         run: |
