--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -80,7 +80,7 @@ jobs:
       pull-requests: write
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
-      ADD_ASSIGNEE_URL: "https://api.github.com/repos/${{github.repository}}/issues/$PR_NUMBER/assignees"
+      ADD_ASSIGNEE_URL: "https://api.github.com/repos/${{github.repository}}/issues/${{ github.event.pull_request.number }}/assignees"
     steps:
       - name: "Get PR Creator"
         run: echo "PR_CREATOR_ID=$GITHUB_ACTOR_ID" >> $GITHUB_ENV
