--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -81,7 +81,6 @@ jobs:
       issues: write
       pull-requests: write
     env:
-      PR_NUMBER: ${{ github.event.pull_request.number }}
       ADD_ASSIGNEE_URL: "https://api.github.com/repos/${{github.repository}}/issues/${{github.event.pull_request.number}}/assignees"
     steps:
       - name: "Get PR Creator"
@@ -89,10 +88,11 @@ jobs:
       
       - name: Add PR Creator to Assignees
         run: |
-          echo "PR_CREATOR_ID = ${{ env.PR_CREATOR_ID }}"
+          # echo "PR_CREATOR_ID = ${{ env.PR_CREATOR_ID }}"
           echo "Username of PR creator = $GITHUB_ACTOR"
-          echo "ASSIGNEE URL = $ADD_ASSIGNEE_URL"
-          echo "Add PR Creator TBD"
+          # echo "ASSIGNEE URL = $ADD_ASSIGNEE_URL"
+          # echo "Add PR Creator TBD"
+          gh pr edit ${{ github.event.pull_request.number }} --add-assignee $GITHUB_ACTOR
       #TODO: MOVE THIS somewhere else, like a separate CODEOWNERS related action
       # - name: Get most recent hash of this workflow
       #   run: echo "Most recent hash--TBD"
