--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -84,6 +84,8 @@ jobs:
       ADD_ASSIGNEE_URL: "https://api.github.com/repos/${{github.repository}}/issues/${{github.event.pull_request.number}}/assignees"
       GH_TOKEN: ${{ github.token }}
     steps:
+      - uses: actions/checkout@v4
+      
       - name: "Get PR Creator"
         run: echo "PR_CREATOR_ID=$GITHUB_ACTOR_ID" >> $GITHUB_ENV
       
