More exit code fun

--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -86,11 +86,18 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Add PR Creator to Assignees
+        id: add_assignee
         run: |
           echo "Assigning user $GITHUB_ACTOR to PR #${{ github.event.pull_request.number }}"
           gh pr edit ${{ github.event.pull_request.number }} --add-assignee $GITHUB_ACTOR
           echo "EXIT_CODE=$?" >> $GITHUB_ENV
           echo "exit code = $?"
+      
+      - name: Exit if bad EXIT_CODE from prev step
+        if: env.EXIT_CODE != '0'
+        run: |
+          echo "Exit code from previous step ${{steps.add_assignee.name}} is non-zero value. ${{env.EXIT_CODE}}"
+          exit "${{env.EXIT_CODE}}"
       #TODO: MOVE THIS somewhere else, like a separate CODEOWNERS related action
       # - name: Get most recent hash of this workflow
       #   run: echo "Most recent hash--TBD"
