--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -11,7 +11,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    inputs:
+      pr_number_manual:
+        description: "Optional PR number to use"
+        required: false
+        type: string
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "automated-pr-comments"
@@ -85,6 +89,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Assess pr_number_manual input
+        # If input is not default value, this is a manual run and PR number should be overwritten with manual input
+        # If input is default value (null), skip this step
+        if: ${{ github.event.inputs.pr_number_manual != null }}
+        run: |
+          echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
+          echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
+
       - name: Add PR Creator to Assignees
         id: add_assignee
         run: |
