--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -86,6 +86,7 @@ jobs:
       pull-requests: write
     env:
       GH_TOKEN: ${{ github.token }}
+      PR_NUMBER: ${{ github.event.pull_request.number }}
     steps:
       - uses: actions/checkout@v4
       
@@ -100,8 +101,9 @@ jobs:
       - name: Add PR Creator to Assignees
         id: add_assignee
         run: |
-          echo "Assigning user $GITHUB_ACTOR to PR #${{ github.event.pull_request.number }}"
-          gh pr edit ${{ github.event.pull_request.number }} --add-assignee $GITHUB_ACTOR
+          echo "Assigning user $GITHUB_ACTOR to PR #$PR_NUMBER"
+          # gh pr edit ${{ github.event.pull_request.number }} --add-assignee $GITHUB_ACTOR
+          gh pr edit $PR_NUMBER --add-assignee $GITHUB_ACTOR
           echo "EXIT_CODE=$?" >> $GITHUB_ENV
           echo "exit code = $?"
       
