--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -88,6 +88,7 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
+      TARGET_BRANCH: ${{ github.event.pull_request.base.ref }}"
     steps:
       - uses: actions/checkout@v4
       
@@ -130,10 +131,7 @@ jobs:
           # echo "if the branch is 'env/dev', add a 'dev' label."
           # echo "if the branch is 'env/qa1', add a 'qa' label."
           # echo "Otherwise do nothing"
-          if [[ 2 -gt 1 ]]
-          then
-            echo "TEST"
-          fi
+
           ./shell-scripts/pr-labels.sh '$PR_NUMBER'
 
 
