--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -15,6 +15,10 @@ on:
         description: "Optional PR number to use"
         required: false
         type: string
+      pr_creator_manual:
+        description: "Optional user/PR creator to specify"
+        required: false
+        type: string
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "automated-pr-comments"
@@ -87,6 +91,7 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
+      PR_CREATOR: $GITHUB_ACTOR
       TARGET_BRANCH: ${{ github.event.pull_request.base.ref }}
     steps:
       - uses: actions/checkout@v4
@@ -99,15 +104,23 @@ jobs:
           echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
           echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
       
+      - name: Assess pr_creator_manual input
+        # If input is not default value, this is a manual run and PR number should be overwritten with manual input
+        # If input is default value (null), skip this step
+        if: ${{ github.event.inputs.pr_creator_manual != null }}
+        run: |
+          echo "Job manually started: Setting PR_CREATOR to value of github.event.inputs.pr_creator_manual (${{ github.event.inputs.pr_number_manual }})"
+          echo "PR_NUMBER=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
+      
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
 
       - name: Add PR Creator to Assignees
         id: add_assignee
         run: |
-          echo "Assigning user $GITHUB_ACTOR to PR #$PR_NUMBER"
-          # gh pr edit ${{ github.event.pull_request.number }} --add-assignee $GITHUB_ACTOR
-          gh pr edit $PR_NUMBER --add-assignee $GITHUB_ACTOR
+          echo "Assigning user $PR_CREATOR to PR #$PR_NUMBER"
+          # gh pr edit ${{ github.event.pull_request.number }} --add-assignee $PR_CREATOR
+          gh pr edit $PR_NUMBER --add-assignee $PR_CREATOR
           echo "EXIT_CODE=$?" >> $GITHUB_ENV
           echo "exit code = $?"
       
