--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -88,7 +88,7 @@ jobs:
       issues: write
       pull-requests: write
       contents: read
-      
+      org: read
     # Trying to use $GITHUB_ACTOR will not work here (just stays as literal string "$GITHUB_ACTOR"), so use github.actor context instead
     env:
       GH_TOKEN: ${{ github.token }}
