--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -79,8 +79,8 @@ jobs:
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
         #TODO: Use a conditional here to alter a comment's text
 
-  add-creator-to-assignees:
-    name: Assign PR Creator to Assignees 
+  add-params-to-pr:
+    name: Assign PR Creator, Add Labels to PR 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
