--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -115,7 +115,7 @@ jobs:
         if: ${{ github.event.inputs.pr_creator_manual != null }}
         run: |
           echo "Job manually started: Setting PR_CREATOR to value of github.event.inputs.pr_creator_manual (${{ github.event.inputs.pr_number_manual }})"
-          echo "PR_NUMBER=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
+          echo "PR_CREATOR=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
       
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
