--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -101,13 +101,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Get assignable users
-        run: |
-          gh api graphql -f query='query($endCursor:String){repository(owner:"org-mushroom-kingdom",name:"bash-git-script"){assignableUsers(first:100,after:$endCursor){nodes{login}pageInfo{endCursor,hasNextPage}}}}' --paginate --jq '.data.repository.assignableUsers.nodes[].login' | tee assignable-azure.txt
-          # gh api users/${{ inputs.pr_creator_manual }}
-          echo "See if inputs has extra chars"
-          echo "${{ inputs.pr_creator_manual }}" | od -c
-
+      # - name: Get assignable users
+      #   run: |
+      #     # gh api graphql -f query='query($endCursor:String){repository(owner:"org-mushroom-kingdom",name:"bash-git-script"){assignableUsers(first:100,after:$endCursor){nodes{login}pageInfo{endCursor,hasNextPage}}}}' --paginate --jq '.data.repository.assignableUsers.nodes[].login' | tee assignable-azure.txt
+      #     gh api users/${{ inputs.pr_creator_manual }}
       #     echo "Exiting early with bad exit code"
       #     exit 1
 
@@ -117,7 +114,7 @@ jobs:
         if: ${{ github.event.inputs.pr_number_manual != null }}
         run: |
           echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
-          echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" | >> $GITHUB_ENV
+          echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
       
       - name: Assess pr_creator_manual input
         # If input is not default value, this is a manual run and PR number should be overwritten with manual input
@@ -125,10 +122,7 @@ jobs:
         if: ${{ github.event.inputs.pr_creator_manual != null }}
         run: |
           echo "Job manually started: Setting PR_CREATOR to value of github.event.inputs.pr_creator_manual (${{ github.event.inputs.pr_number_manual }})"
-          trim=$(echo ${{ inputs.pr_creator_manual }} | sed 's/[[:space:]]*$//')
-          echo "$trim" | od -c
-          # echo "PR_CREATOR=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
-          echo "PR_CREATOR=$trim" >> $GITHUB_ENV
+          echo "PR_CREATOR=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
       
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
