--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -19,6 +19,10 @@ on:
         description: "Optional user/PR creator to specify"
         required: false
         type: string
+      target_branch_manual:
+        description: "Optional target branch to specify"
+        required: false
+        type: string
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "automated-pr-comments"
@@ -121,8 +125,16 @@ jobs:
         # If input is default value (null), skip this step
         if: ${{ github.event.inputs.pr_creator_manual != null }}
         run: |
-          echo "Job manually started: Setting PR_CREATOR to value of github.event.inputs.pr_creator_manual (${{ github.event.inputs.pr_number_manual }})"
+          echo "Job manually started: Setting PR_CREATOR to value of github.event.inputs.pr_creator_manual (${{ github.event.inputs.pr_creator_manual }})"
           echo "PR_CREATOR=${{ github.event.inputs.pr_creator_manual }}" >> $GITHUB_ENV
+      
+      - name: Assess target_branch_manual input
+        # If input is not default value, this is a manual run and PR number should be overwritten with manual input
+        # If input is default value (null), skip this step
+        if: ${{ github.event.inputs.target_branch_manual != null }}
+        run: |
+          echo "Job manually started: Setting target branch to value of github.event.inputs.target_branch_manual (${{ github.event.inputs.target_branch_manual }})"
+          echo "TARGET_BRANCH=${{ github.event.inputs.target_branch_manual }}" >> $GITHUB_ENV
       
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
