method GET >> test-pr-axn-2

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Get List of Changed Files
         run: |
-          gh api /repos/{{ $github.repository }}/pulls/$PR_NUMBER/files
+          gh api --method GET /repos/{{ $github.repository }}/pulls/$PR_NUMBER/files
