--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -47,6 +47,14 @@ jobs:
       - name: Echo things
         run: echo "Will echo stuff here as needed"
 
+      - name: Assess pr_number_manual input
+        # If input is not default value, this is a manual run and PR number should be overwritten with manual input
+        # If input is default value (null), skip this step
+        if: ${{ github.event.inputs.pr_number_manual != null }}
+        run: |
+          echo "Job manually started: Setting PR_NUMBER to value of github.event.inputs.pr_number_manual (${{ github.event.inputs.pr_number_manual }})"
+          echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
+      
       - name: Get List of Changed Files
         run: |
           gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
