--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -57,4 +57,4 @@ jobs:
       
       - name: Get List of Changed Files
         run: |
-          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
+          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
