--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -57,8 +57,11 @@ jobs:
       
       - name: Get List of Changed Files
         run: |
+          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename)
           echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
       
-      - name: Print changed_files
-        run: echo "${{env.CHANGED_FILES}}"
+      - name: Print CHANGED_FILES
+        run: |
+          echo "Attempt to print env.CHANGED_FILES..."
+          echo "${{env.CHANGED_FILES}}"
