--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -56,12 +56,15 @@ jobs:
           echo "PR_NUMBER=${{ github.event.inputs.pr_number_manual }}" >> $GITHUB_ENV
       
       - name: Get List of Changed Files
+        id: changed_files
         run: |
           gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename)
-          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
+          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
+          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
         run: |
           echo "Attempt to print env.CHANGED_FILES..."
-          echo "${{env.CHANGED_FILES}}"
+          # echo "${{env.CHANGED_FILES}}"
+          echo "${{ steps.changed_files.outputs.CHANGED_FILES }}"
