--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -66,5 +66,5 @@ jobs:
       - name: Print CHANGED_FILES
         run: |
           echo "Attempt to print env.CHANGED_FILES..."
-          printf "%s\\n" "${{env.CHANGED_FILES}}"
+          printf "%s\\n" "${{env.CHANGED_FILES[@]}}"
           # echo "${{ steps.changed_files.outputs.CHANGED_FILES }}"
