--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -60,12 +60,12 @@ jobs:
         run: |
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename)
-          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
-          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
+          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
+          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
         run: |
           echo "Attempt to print env.CHANGED_FILES..."
-          changed_files=${{env.CHANGED_FILES}}
+          # changed_files=${{env.CHANGED_FILES}}
+          changed_files=${{ steps.changed_files.outputs.CHANGED_FILES }}
           printf "%s\\n" "${changed_files[@]}"
-          # echo "${{ steps.changed_files.outputs.CHANGED_FILES }}"
