--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Get List of Changed Files
         id: changed_files
         run: |
-          # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
+          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename)
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
           echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
