--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -60,9 +60,11 @@ jobs:
         run: |
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
           mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename)
+          echo "Printing changed file list:"
           printf "%s\\n" "${changed_files[@]}"
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
-          echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
+          # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
+          echo "CHANGED_FILES=${{toJSON(changed_files)}}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
         run: |
