--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -66,7 +66,7 @@ jobs:
 
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_OUTPUT
-          # echo "CHANGED_FILES=${{toJSON($changed_files)}}" >> $GITHUB_OUTPUT
+          # echo "CHANGED_FILES=${{toJSON(changed_files)}}" >> $GITHUB_OUTPUT
       
       - name: Print CHANGED_FILES
         run: |
