--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -59,9 +59,9 @@ jobs:
         id: changed_files
         run: |
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename
-          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r .[].filename | .join(", "))
+          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename.join(', '')')
           echo "Printing changed file list:"
-          echo "${changed_files"
+          echo "${changed_files}"
           # printf "%s\\n" "${changed_files[@]}"
 
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
