--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -36,6 +36,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
+      contents: write
 
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -61,7 +62,10 @@ jobs:
         id: changed_files
         run: |
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename | join(", ")'
-          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" > repos/org-mushroom-kingdom/bash-git-script/test-json-outpt.txt
+          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" > test-json-outpt.txt
+          git add test-json-output.txt
+          git commit -m "Capture output from Github 'get changed files' call"
+          git push origin main
           # mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r 'map(.filename) | join(", ")')
           echo "Printing changed file list:"
           echo "${changed_files}"
