--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -71,7 +71,7 @@ jobs:
           
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
           changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
-          echo "$changed_files" > test-json-output.txt 
+          echo "$changed_files_output" > test-json-output.txt 
           git add test-json-output.txt
           git commit -m "Capture output from Github 'get changed files' call"
           git push origin main
