--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -63,22 +63,23 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
       
       # TODO: LOOK UP AND EXPLAIN JQ MAP
-      # jq map will filter out 
+      # TODO: EXPLAIN HOW YOU WERE ABLE TO WRITE TO JSONOUTPUT FILE
+      # jq map will filter out TBD
       - name: Get List of Changed Files
         id: changed_files
         run: |
-          # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename | join(", ")'
+          gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename | join(", ")'
           
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
-          changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
-          echo "$changed_files_output" > test-json-output.txt 
-          git add test-json-output.txt
-          git commit -m "Capture output from Github 'get changed files' call"
-          git push origin main
+          # changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
+          # echo "$changed_files_output" > test-json-output.txt 
+          # git add test-json-output.txt
+          # git commit -m "Capture output from Github 'get changed files' call"
+          # git push origin main
           
           # mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r 'map(.filename) | join(", ")')
-          echo "Printing changed file list:"
-          echo "${changed_files}"
+          # echo "Printing changed file list:"
+          # echo "${changed_files}"
           # printf "%s\\n" "${changed_files[@]}"
 
           # echo "CHANGED_FILES=${changed_files}" >> $GITHUB_ENV
