--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -69,7 +69,7 @@ jobs:
         id: changed_files
         run: |
           # [] = give separate output for each
-          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename') )
+          mapfile -t changed_files < <(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files" | jq -r '.[].filename')
           # gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
           # changed_files_output=$(gh api --method GET "/repos/${{ github.repository }}/pulls/$PR_NUMBER/files")
           # echo "$changed_files_output" > test-json-output.txt 
