exp w calling codeowners script >> test-pr-xn-2

--- a/.github/workflows/test-pr-action-2.yml
+++ b/.github/workflows/test-pr-action-2.yml
@@ -97,5 +97,12 @@ jobs:
           # Join it back to an array
           IFS=", "
           changed_files_array=($changed_files_str)
+
+          # Look for that file's path in CODEOWNERS in a granular way
+          # Assume this is a script that returns a not_in_codeowners ,-delmitied string
+          codeowners_thing=(bash ./shell-scripts/read-thru-codeowners.sh)
+          echo "$codeowners_thing"
+          # Pass that string to next step which will... 
+          # If not_in_codeowners != "" then loop thru the string and make a multiline coment
           echo "changed_files_array[1] = ${changed_files_array[1]}"
           # printf "%s\\n" "${changed_files[@]}"
