--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -56,6 +56,7 @@ jobs:
   test-job:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    # Environmental variables. These are always strings
     env:
       PR_NUMBER: "33"
       COMMENT_URL: "https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
